# ffmpeg-watch

./: README.md  pyproject.toml  setup.py
ffmpeg_watch/: __init__.py  cli.py  default.py  utils.py  watch.py
tests/: test_cli.py  test_init.py
